@@ -1,5 +1,6 @@
 HEAD
 	+ Set utf8 as the default system charset, fixes problem with euro character
+	+ Removed extended backup as now it should be managed by ebox-ebackup
 1.3.12
 	+ Add page title
 1.3.4
